--- a/wp-content/themes/ponderosa/style.css
+++ b/wp-content/themes/ponderosa/style.css
@@ -24,7 +24,11 @@ Text Domain: Mixen Communication & Web Technology
     src: url(fonts/Champagne&Limousines.ttf);
 }
 
-/* GENERAL STYLES */
+
+
+
+
+/***** GENERAL STYLES *****/
 html {
     margin-top: 0!important;
 }
@@ -77,7 +81,7 @@ body {
 }
 
 
-/* NAVBAR */
+/***** NAVBAR *****/
 .navbar {
     height: 80px;
     margin: 0;
@@ -187,43 +191,14 @@ body {
     max-width: 100%;
 }
 
-
-/* PRE-PRODUCTOS */
-.index .preproductos {
-    position: relative;
-}
-
-.index .preproductos .container {
-    margin-top: -12vw;
-}
-
-.index .preproductos .container img {
-    position: relative;
-    bottom: -12vw;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-}
-
-.index .preproductos .bottom-background img {
-    width: 100%;
-}
-
-.index .preproductos .fadein {
-    visibility: hidden;
-}
-
 /* PRODUCTOS */
-.index .productos .container {
+.index .productos {
     position: relative;
+    margin-bottom: 75px;
 }
 
-.index .productos .container .encabezado p {
-    margin-top: 30px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 700;
-    font-size: 38px;
-    color: #505050;
+.index .productos .container {
+    margin-top: 50px;
 }
 
 .index .productos .container .encabezado img {
@@ -231,92 +206,71 @@ body {
     width: 100px;
 }
 
-.index .productos .container .row {
+.index .productos .container .encabezado p {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 700;
+    font-size: 38px;
+    color: #505050;
     margin-top: 30px;
+    margin-bottom: 75px;
 }
 
-.index .productos .container .row .col-sm-2 .img-container {
-    position: relative;
-    height: 20vw;
-}
-
-.index .productos .container .row .col-sm-2 .img-container .responsive {
-    display: none;
-}
-
-.index .productos .container .row .col-sm-2 .img-container img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 17vw;
-    max-width: none;
-    transform: translate(-50%,-50%);
-    -webkit-transition: width 300ms ease;
-    -moz-transition: width 300ms ease;
-    transition: width 300ms ease;
-    border: 1.5vw solid #fff;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 1px 2px 32px 0.00px rgba(35, 31, 32, 0.41);
-}
-
-.index .productos .container .row .col-sm-2 .img-container.active img,
-.index .productos .container .row .col-sm-2 .img-container img:hover {
-    width: 19vw;
-}
-
-.index .productos .container .row .col-sm-2 .img-container.active::after {
-    content: '';
-    position: absolute;
-    display: block;
-    height: 2vw;
-    width: 2vw;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    bottom: -.6vw;
-    border-radius: 50%;
-    background-color: #ee2e24;
-    z-index: 10;
-}
-
-.index .productos .container .row .col-sm-2:nth-child(1) .img-container img {
-    z-index: 6;
-}
-
-.index .productos .container .row .col-sm-2:nth-child(2) .img-container img {
-    z-index: 5;
-}
-
-.index .productos .container .row .col-sm-2:nth-child(3) .img-container img {
-    z-index: 4;
-}
-
-.index .productos .container .row .col-sm-2:nth-child(4) .img-container img {
-    z-index: 3;
-}
-
-.index .productos .container .row .col-sm-2:nth-child(5) .img-container img {
+.index .productos .carousel {
     z-index: 2;
 }
 
-.index .productos .container .row .col-sm-2:nth-child(6) .img-container img {
+.index .productos .carousel .img-container {
+    position: relative;
+    height: 400px;
+}
+
+.index .productos .carousel .img-container img {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+}
+
+.index .productos .carousel .col-md-3,
+.index .productos .carousel .col-md-9 {
+    padding: 0;
+}
+
+.index .productos .carousel .col-md-4 img {
+    max-width: 100%;
+}
+
+.index .productos .carousel .col-md-8 img {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+}
+
+.index .productos .carousel .carousel-inner {
+    width: calc(100% - 100px);
+    margin: 0 auto;
+}
+
+.index .productos .carousel-control.left,
+.index .productos .carousel-control.right {
+    width: 50px;
+    color: #ee2e24;
+    background-image: none;
+}
+
+.index .productos .bottom-background img {
+    position: absolute;
+    bottom: -75px;
+    height: 200px;
+    width: 100%;
     z-index: 1;
 }
 
-.index .productos .container .lbproductos {
-    margin-top: 6vw;
-}
-
-.index .productos .container .lbproductos p {
-    margin: 0;
-    font: italic 700 24px 'Roboto', sans-serif;
-    color: #ee2e24;
-}
-
-
 /* RECETAS */
 .index .receta {
+    font-family: 'Roboto Condensed', sans-serif;
     background-size: cover;
 }
 
@@ -326,17 +280,16 @@ body {
 }
 
 .index .receta .container h3 {
-    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 700;
     font-size: 38px;
-    color: #505050;
+    color: #303030;
     z-index: 10;
     margin-bottom: 30px;
     margin-top: 20px;
 }
 
 .index .receta .row .col-sm-4 {
-    min-height: 100%
+    min-height: 100%;
 }
 
 .index .receta h5,
@@ -346,11 +299,11 @@ body {
 }
 
 .index .receta h5 {
-    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 24px;
     color: #505050;
-    height: 55px;
+    height: 48px;
+    margin-top: 25px;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
@@ -361,7 +314,6 @@ body {
 }
 
 .index .receta .row p {
-    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     color: #505050;
     z-index: 10;
@@ -408,6 +360,7 @@ body {
     width: 170px;
     border-radius: 50%;
     margin: 0px auto;
+    top: 20px;
 }
 
 .index .receta .post-img-container img {
@@ -642,7 +595,7 @@ body {
 
 
 
-/****** RECETAS ******/
+/***** RECETAS *****/
 /* BANNER */
 .recetas .banner {
     height: 250px;
@@ -669,7 +622,6 @@ body {
     font-size: 38px;
     color: #ffffff;
 }
-
 
 /* DESAYUNO, COMIDA, CENA */
 .recetas .carousel-indicators {
@@ -719,7 +671,6 @@ body {
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
 }
-
 
 /* RECETAS-CAROUSEL */
 .recetas .top-title {
@@ -816,7 +767,6 @@ body {
     color: #e7272d;
 }
 
-
 /* TOP-FOOTER */
 .recetas .top-footer {
     position: relative;
@@ -870,7 +820,6 @@ body {
     font-size: 38px;
     color: #ffffff;
 }
-
 
 /* DETALLE-RECETA */
 .detalle-receta .detalle .container .top-title {
@@ -1006,10 +955,6 @@ body {
     background: url(img/detalle-receta/icons/timer2.png) no-repeat center center;
 }
 
-
-
-
-
 /* TOP-FOOTER */
 .detalle-receta .top-footer {
     position: relative;
@@ -1036,18 +981,7 @@ body {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-/* FOOTER */
+/***** FOOTER *****/
 footer {
     background: url(img/contactanos/bg.png) no-repeat center center;
     background-size: cover;
@@ -1077,7 +1011,10 @@ footer .footer-rights a:hover {
 }
 
 
-/*** Parallax CSS ****/
+
+
+
+/***** Parallax CSS *****/
 .parallax-container {
     position: relative;
     overflow: hidden;
@@ -1108,7 +1045,7 @@ footer .footer-rights a:hover {
 
 
 
-/*** RESPONSIVE ****/
+/***** RESPONSIVE *****/
 @media(max-width: 1200px) {
 
 }
@@ -1118,20 +1055,19 @@ footer .footer-rights a:hover {
 }
 
 @media(max-width: 767px) {
-    /* GENERAL STYLES */
+    /***** GENERAL STYLES *****/
     #wpadminbar {
         display: none;
     }
 
-    /* NAVBAR */
+
+    /***** NAVBAR *****/
     .navbar {
         height: 50px;
     }
-
     .navbar .navbar-collapse {
         background-color: rgba(0,0,0,.5);
     }
-
     .navbar .top-logo {
         display: inline-block;
         float: left;
@@ -1140,30 +1076,25 @@ footer .footer-rights a:hover {
         padding-left: 5px;
         width: auto;
     }
-
     .navbar-nav {
         width: 100%;
         margin-left: 0;
         margin-right: 0;
         float: none;
     }
-
     .navbar-nav > li {
         height: auto;
         padding: 0;
         max-width: 200px;
         margin: 0 auto;
     }
-
     .navbar-nav > li > a {
         transform: none;
         padding: 3px 0;
     }
-
     .navbar .navbar-nav .nav-logo {
         display: none;
     }
-
     .navbar .navbar-nav .nav-social {
         display: none;
     }
@@ -1174,60 +1105,21 @@ footer .footer-rights a:hover {
     .index .nosotros p {
         font-size: 22px;
     }
-
     .index .nosotros img {
         max-height: 70%;
         max-width: 70%;
     }
 
-
     /* PRODUCTOS */
-    .index .productos .container .encabezado p {
-        font-size: 28px;
+    .index .productos {
+        margin-bottom: 75px;
     }
-
-    .index .productos .container .row {
-        margin-top: 2vw;
+    .index .productos .carousel .img-container {
+        height: 350px;
     }
-
-    .index .productos .container .row .col-sm-2 .img-container {
-        height: 20vw;
-        margin-top: 50px;
-    }
-
-    .index .productos .container .row .col-sm-2 .img-container .responsive {
-        display: none;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        bottom: -30px;
-        font: italic 700 18px 'Roboto', sans-serif;
-        color: #ee2e24;
-        z-index: 10;
-    }
-
-    .index .productos .container .row .col-sm-2 .img-container img {
-        width: 20vw;
-        border: 1.5vw solid #fff;
-    }
-
-    .index .productos .container .row .col-sm-2 .img-container.active::after {
-        display: none;
-    }
-
-    .index .productos .container .row .col-sm-2 .img-container.active img,
-    .index .productos .container .row .col-sm-2 .img-container img:hover {
-        width: 23vw;
-        z-index: 9;
-    }
-
-    .index .productos .container .row .col-sm-2 .img-container .responsive {
-        position: absolute;
-        display: block;
-    }
-
-    .index .productos .container .lbproductos p {
-        display: none;
+    .index .productos .bottom-background img {
+        bottom: -75px;
+        height: 200px;
     }
 
 
@@ -1235,13 +1127,21 @@ footer .footer-rights a:hover {
     .index .receta .container h3 {
         font-size: 28px;
     }
-
     .index .receta h5 {
         font-size: 18px;
+        height: 36px;
     }
-
     .index .receta .bckgnd {
         margin-top: 30px;
+    }
+    .index .receta .bckgnd {
+        height: 350px;
+        max-width: 300px;
+        margin-bottom: 25px;
+    }
+    .index .receta .post-img-container {
+        height: 100px;
+        width: 100px;
     }
 
 
@@ -1251,11 +1151,9 @@ footer .footer-rights a:hover {
         transform: none;
         top: 0;
     }
-
     .index .contactanos .contactanos-bottom {
         height: 550px;
     }
-
     .index .contactanos .contactanos-bottom .form-container .right-side p::before {
         background-size: contain!important;
         position: absolute;
@@ -1266,16 +1164,13 @@ footer .footer-rights a:hover {
         left: auto;
         margin-left: -30px;
     }
-
     .index .contactanos .contactanos-bottom .form-container .col-sm-3 {
         position: relative;
     }
-
     .index .contactanos .contactanos-bottom .form-container .left-side {
         position: relative;
         text-align: center;
     }
-
     .index .contactanos .contactanos-bottom .form-container .right-side {
         margin-top: 30px;
         position: relative;
@@ -1283,47 +1178,39 @@ footer .footer-rights a:hover {
     }
 
 
-
     /****** RECETAS ******/
     /* BANNER */
     .recetas .banner {
         height: 200px;
     }
-
     .recetas .banner .container .title {
         bottom: 40px;
     }
-
     .recetas .banner .container .title p {
         font-size: 32px;
     }
-
 
     /* DESAYUNO, COMIDA, CENA */
     .recetas .carousel-indicators {
         position: relative;
         bottom: -40px;
     }
-
     .recetas .carousel-indicators li {
         background-color: #ee2e24;
         border: 1px solid #777;
         height: 20px;
         width: 20px;
     }
-
     .recetas .desayuno .container,
     .recetas .comida .container,
     .recetas .cena .container {
         height: auto;
     }
-
     .recetas .desayuno .container .carousel .carousel-inner .item .row .col-sm-4 .image-container,
     .recetas .comida .container .carousel .carousel-inner .item .row .col-sm-4 .image-container,
     .recetas .cena .container .carousel .carousel-inner .item .row .col-sm-4 .image-container {
         height: 300px;
     }
-
     .recetas .desayuno  .container .carousel .carousel-inner .item .row .col-sm-4 .image-container img,
     .recetas .comida  .container .carousel .carousel-inner .item .row .col-sm-4 .image-container img,
     .recetas .cena  .container .carousel .carousel-inner .item .row .col-sm-4 .image-container img {
@@ -1336,71 +1223,57 @@ footer .footer-rights a:hover {
         -moz-transform: translateX(-50%);
     }
 
-
     /* RECETAS-CAROUSEL */
     .recetas .top-title h2 {
         font-size: 28px;
         margin-left: 70px;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .descripcion .title {
         font-size: 20px;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .descripcion::before {
         width: 90%;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .descripcion::after {
         width: 90%;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .footer {
         position: relative;
         height: 50px;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .footer .col-sm-6 {
         position: absolute;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .time {
         left: 40px;
     }
-
     .recetas .container .carousel .carousel-inner .item .row .col-sm-4 .link {
         right: 40px;
     }
-
 
     /* TOP-FOOTER */
     .recetas .top-footer {
         height: 250px;
     }
-
     .recetas .top-footer .container .col-sm-6 .logo {
         height: 120px;
     }
-
     .recetas .top-footer .container .col-sm-6 .social img {
         height: 30px;
         width: 30px;
     }
 
 
-
-    /* FOOTER */
+    /***** FOOTER *****/
     footer {
         background: url(img/contactanos/bg.png) no-repeat center center;
         background-size: cover;
     }
-
     footer .footer-rights {
         background-color: rgba(166, 23, 28, 0.6);
         padding: 10px 0;
         color: #ffffff;
     }
-
     footer .footer-rights p {
         font-family: 'Myriad Pro', sans-serif;
         font-size: 12px;
@@ -1408,25 +1281,22 @@ footer .footer-rights a:hover {
         margin: 0;
         display: inline-block;
     }
-
     footer .footer-rights a {
         text-decoration: none!important;
         color: #c7c7c7;
     }
-
     footer .footer-rights a:hover {
         color: #ffffff;
     }
 
 
-    /*** Parallax CSS ****/
+    /***** Parallax CSS *****/
     .parallax-container {
         position: relative;
         overflow: hidden;
         min-height: 200px;
         height: auto;
     }
-
     .parallax {
         position: absolute;
         top: 0;
@@ -1435,7 +1305,6 @@ footer .footer-rights a:hover {
         bottom: 0;
         z-index: -1;
     }
-
     .parallax img {
         display: none;
         position: absolute;
@@ -1445,4 +1314,19 @@ footer .footer-rights a:hover {
         width: 100%;
         background-position: center;
     }
+}
+
+@media(max-width: 480px) {
+    /* PRODUCTOS */
+    .index .productos {
+        margin-bottom: 60px;
+    }
+    .index .productos .carousel .img-container {
+        height: 200px;
+    }
+    .index .productos .bottom-background img {
+        bottom: -60px;
+        height: 150px;
+    }
+
 }
