--- a/wp-content/themes/ponderosa/style.css
+++ b/wp-content/themes/ponderosa/style.css
@@ -170,25 +170,150 @@ body {
 }
 
 
-/* NOSOTROS */
-.index .nosotros .container {
-    background-size: cover;
-}
-
-.index .nosotros p {
+/* LINEA */
+.index .linea {
+    text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 30px;
-    color: #2f2f2f;
-    padding: 0 20px;
-    margin-top: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    color: rgba(80, 80, 80, 1);
 }
 
-.index .nosotros img {
-    padding: 30px 30px 30px 30px;
-    min-height: none;
+.index .linea .fade {
+    display: none;
+}
+
+.index .linea .fade.active {
+    display: block;
+}
+
+.index .linea .container .tab-content {
+    height:  350px;
+}
+
+.index .linea .container .top .col-sm-5 {
+    height: 100%;
+}
+
+.index .linea .container .top .col-sm-5 img {
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     max-height: 100%;
-    min-width: none;
     max-width: 100%;
+}
+
+.index .linea .container .top .col-sm-5::after {
+    position: absolute;
+    content: '';
+    height: 350px;
+    width: 100%;
+    top: 0;
+    right: -45%;
+    background: url(img/nosotros/img_bg.png) no-repeat center center;
+    background-size: contain;
+    z-index: 2;
+}
+
+.index .linea .container .top .col-sm-7 {
+    text-align: left;
+    height: auto;
+    padding-left: 90px;
+    z-index: 3;
+}
+
+.index .linea .container .top .col-sm-7 h3 {
+    font-weight: 700;
+    font-size: 28px;
+}
+
+.index .linea .container .top .col-sm-7 p {
+    font-weight: 500;
+    font-size: 20px;
+    margin-top: 25px;
+}
+
+.index .linea .container .bottom {
+    height: 100px;
+    border-top-style: dotted;
+    border-top-width: 5px; 
+    margin-top: 30px;
+}
+
+.index .linea .container .punto {
+    position: relative;
+    text-align: center;
+    height: 100%;
+    width: 12.5%;
+}
+
+.index .linea .container .punto h3 {
+    position: absolute;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 30px;
+    height: 30px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.index .linea .container .punto .line {
+    position: absolute;
+    height: calc(100% - 30px);
+    width: 5px;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    border-right-style: dotted;
+    border-right-width: 5px;
+}
+
+.index .linea .container .punto a {
+    position: relative;
+    display: block;
+    height: 22px;
+    width: 22px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+}
+
+.index .linea .container .punto a::before {
+    position: absolute;
+    content: '';
+    top: -6px;
+    left: -6px;
+    width: calc(100% + 12px);
+    height: calc(100% + 12px);
+    border-radius: 50%;
+    border: 5px solid #ee2e24;
+}
+
+.index .linea .container .punto a::before,
+.index .linea .container .punto a {
+    transition: all 300ms ease;
+    -webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+}
+
+.index .linea .container .punto a:hover,
+.index .linea .container .punto .active {
+    height: 30px;
+    width: 30px;
+    background-color: #ee2e24;
+}
+
+.index .linea .container .punto a:hover::before,
+.index .linea .container .punto .active::before {
+    border: 5px solid  rgba(0, 0, 0, 1);
 }
 
 /* PRODUCTOS */
@@ -1047,11 +1172,49 @@ footer .footer-rights a:hover {
 
 /***** RESPONSIVE *****/
 @media(max-width: 1200px) {
-
+/***** INDEX *****/
+    /* LINEA */
+    .index .linea .container .tab-content {
+        height:  450px;
+    }
+    .index .linea .container .top .col-sm-5::after {
+        height: 450px;
+    }
+    .index .linea .container .top .col-sm-7 h3 {
+        font-weight: 700;
+        font-size: 26px;
+    }
+    .index .linea .container .top .col-sm-7 p {
+        font-weight: 500;
+        font-size: 18px;
+        margin-top: 25px;
+    }
+    .index .linea .container .bottom {
+        margin-top: 45px;
+    }
 }
 
 @media(max-width: 992px) {
-
+    /***** INDEX *****/
+    /* LINEA */
+    .index .linea .container .tab-content {
+        height:  450px;
+    }
+    .index .linea .container .top .col-sm-5::after {
+        height: 450px;
+    }
+    .index .linea .container .top .col-sm-7 h3 {
+        font-weight: 700;
+        font-size: 26px;
+    }
+    .index .linea .container .top .col-sm-7 p {
+        font-weight: 500;
+        font-size: 18px;
+        margin-top: 25px;
+    }
+    .index .linea .container .bottom {
+        margin-top: 45px;
+    }
 }
 
 @media(max-width: 767px) {
@@ -1101,13 +1264,56 @@ footer .footer-rights a:hover {
 
 
     /****** INDEX ******/
-    /* NOSOTROS */
-    .index .nosotros p {
-        font-size: 22px;
+    /* LINEA */
+    .index .linea .container .tab-content {
+        height:  425px;
     }
-    .index .nosotros img {
-        max-height: 70%;
-        max-width: 70%;
+    .index .linea .container .top .col-sm-7 {
+        text-align: center;
+        padding-left: 0px;
+    }
+    .index .linea .container .top .col-sm-7 h3 {
+        font-size: 24px;
+    }
+    .index .linea .container .top .col-sm-7 p {
+        font-size: 18px;
+        margin-top: 15px;
+        padding: 0 15px;
+    }
+    .index .linea .container .bottom {
+        height: 80px;
+        border-top-width: 3px; 
+        margin-top: 10px;
+    }
+    .index .linea .container .punto h3 {
+        font-size: 18px;
+        line-height: 30px;
+        height: 30px;
+    }
+    .index .linea .container .punto .line {
+        height: calc(100% - 30px);
+        width: 3px;
+        border-right-width: 3px;
+    }
+    .index .linea .container .punto a {
+        height: 18px;
+        width: 18px;
+    }
+    .index .linea .container .punto a::before {
+        top: -5px;
+        left: -5px;
+        width: calc(100% + 10px);
+        height: calc(100% + 10px);
+        border: 4px solid #ee2e24;
+    }
+    .index .linea .container .punto a:hover,
+    .index .linea .container .punto .active {
+        height: 24px;
+        width: 24px;
+    }
+    .index .linea .container .punto a:hover::before,
+    .index .linea .container .punto .active::before {
+        border: 4px solid  rgba(0, 0, 0, 1);
     }
 
     /* PRODUCTOS */
